# Adnoc-BL-check

./: README.md  left.docx  pyproject.toml  right.docx  run_comparison.py  streamlit_app.py
src/comparison_engine/: __init__.py
src/comparison_engine/adapters/: __init__.py  document_loader.py
src/comparison_engine/domain/models/: __init__.py  shipment.py
src/comparison_engine/pipelines/: __init__.py  document_pipeline.py
src/comparison_engine/services/: report_generator.py  suggestion_service.py
src/comparison_engine/transformers/: __init__.py  ai_extractor.py  field_extractor.py  fuzzy_matcher.py  normalizer.py
src/comparison_engine/use_cases/: __init__.py  compare_shipments.py
tests/: test_compare_shipments.py  test_document_pipeline.py
