[project]
name = "shipment-comparison-engine"
version = "0.1.0"
description = "Core comparison engine for shipment records"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "python-docx>=0.8.11",
    "pdfminer.six>=20240401",
    "python-dateutil>=2.8.2",
    "fpdf>=1.7.2",
]

[project.dependencies]
streamlit = "^1.24.0"
openai = "^1.0.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
